--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "drizzle-orm": "^0.28.6",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.483.0",
     "next": "^13.5.3",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.2.3",
