--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tailwindcss/forms": "^0.5.6",
     "axios": "^1.5.1",
+    "contentful": "^11.5.11",
     "drizzle-orm": "^0.28.6",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
